2008-06-28  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil.Metadata/CultureUtils.cs
	* Mono.Cecil.Metadata/MetadataInitializer.cs
	* Mono.Cecil.Metadata/MetadataReader.cs
	* Mono.Cecil.Metadata/MetadataRowReader.cs
	* Mono.Cecil.Metadata/MetadataRowWriter.cs
	* Mono.Cecil.Metadata/MetadataTableReader.cs
	* Mono.Cecil.Metadata/Utilities.cs:
		Seal non-visible classes.
		[Found using Gendarme AvoidUnsealedUninheritedInternalClassesRule]

	* Mono.Cecil.Cil/CodeReader.cs
	* Mono.Cecil.Cil/OpCodeNames.cs
	* Mono.Cecil.Cil/CodeWriter.cs
	* Mono.Cecil.Cil/SymbolStoreHelper.cs:
		Seal non-visible classes.
		[Found using Gendarme AvoidUnsealedUninheritedInternalClassesRule]

	* Mono.Cecil/SecurityDeclarationReader.cs
	* Mono.Cecil/NullReferenceImporter.cs
	* Mono.Cecil/TableComparers.cs:
		Seal non-visible classes.
		[Found using Gendarme AvoidUnsealedUninheritedInternalClassesRule]

	* Mono.Cecil/AssemblyNameReference.cs:
		Use String.Length > 0 instead of comparing to String.Empty
		[Found using Gendarme CompareWithEmptyStringEfficientlyRule]

	* Mono.Cecil.Metadata/MetadataToken.cs:
		Add a private Equals(MetadataToken) method. This allows the 
		existing operators (== and !=) to avoid boxing, since they
		will prefer it to the Equals(object) method.
		[Found using Gendarme ImplementEqualsTypeRule]

	* Mono.Cecil.Cil/GuidAttribute.cs:
		Seal attribute class
		[Found using Gendarme AvoidUnsealedConcreteAttributesRule]

	* Mono.Cecil.Signatures/SignatureWriter.cs:
		Fix typo.
		[Found using Gendarme AvoidUnneededUnboxingRule]

2008-06-06  Jb Evain  <jbevain@novell.com>

	* CodeGen/cecil.xml: constrained. is of type InlineType.
	* Mono.Cecil.Cil/OpCodes.cs: re-generate.

2008-05-14  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionWriter.cs:
		Only create the GenericParameterConstraint table if needed.
		Patch by Richard Flamsholt <richard.flamsholt@gmail.com>.

	* Mono.Cecil.Cil/MethodBody.cs:
		Fix typo in switch cloning. Patch by